--- a/digital/accordion.html
+++ b/digital/accordion.html
@@ -61,7 +61,7 @@
                     <section>
                         <h1 class="mt-0 mb-10">折疊選單 Accordion</h1>
                         <p>
-                            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字。
+                            Accordion 是一個可折疊／展開內容區域的元件。主要是針對顯示內容複雜或很多的頁面進行分區塊的顯示及隱藏。
                         </p>
                     </section>
                     <section>
@@ -81,7 +81,7 @@
                                 <div class="tab__content__pane active">
                                     <h2 class="mt-0 mb-10">Usage</h2>
                                     <p class="mt-10 mb-20">
-                                        文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
+                                        Accordions 至少含有一對標題及內容。點擊標題展開內容，其他內容將會收起。
                                     </p>
                                     <img src="../system/accordion-usage-desktop.png" width="100%" alt="">
                                     <hr class="my-40">
