--- a/digital/alert.html
+++ b/digital/alert.html
@@ -61,7 +61,7 @@
                     <section>
                         <h1 class="mt-0 mb-10">警示框 Alert</h1>
                         <p>
-                            有警告使用者的意思，需要對當前問題執行動作，按鈕動作通常為「確定」及「返回」或「取消」。
+                            通常用於通知使用者發生了警告或錯誤，並詢問接下來的操作。
                         </p>
                     </section>
                     <section>
@@ -81,13 +81,13 @@
                                 <div class="tab__content__pane active">
                                     <h2 class="mt-0 mb-10">Usage</h2>
                                     <p class="mt-10 mb-20">
-                                        有警告使用者的意思，需要對當前問題執行動作，按鈕動作通常為「確定」及「返回」或「取消」。
+                                        按鈕動作通常為「確定」及「返回」或「取消」，需要點進一步的操作才能關閉。
                                     </p>
                                     <img src="../system/alert-usage-desktop.png" width="100%" alt="">
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Ｗhen to use</h2>
                                     <p class="mt-10 mb-20">
-                                        Notification 的干擾小，傳達簡單的消息。
+                                        Alert 強制意味濃厚，會打擾使用者正在進行中的流程。
                                     </p>
                                     <table class="my-20">
                                         <tr>
