--- a/digital/checkbox.html
+++ b/digital/checkbox.html
@@ -87,7 +87,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Ｗhen to use</h2>
                                     <p class="mt-10 mb-20">
-                                        文字文字文字文字文字文字文字文字文字文字文字文字
+                                        Checkboxes 使用者可以選取一個（含）以上的選項。
                                     </p>
                                     <table>
                                         <tr>
