--- a/digital/cookie.html
+++ b/digital/cookie.html
@@ -61,7 +61,7 @@
                     <section>
                         <h1 class="mt-0 mb-10">Cookies</h1>
                         <p>
-                            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
+                            當使用者第一次使用該瀏覽器瀏覽《天下》的網站時，會在剛進入網站時詢問是否同意使用 Cookie ，若沒有點擊，滾動至第二屏時會隱藏，下一頁或是下一次瀏覽則會再次出現，直至使用者同意。
                         </p>
                     </section>
                     <section>
