--- a/digital/drawer.html
+++ b/digital/drawer.html
@@ -89,8 +89,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Anatomy</h2>
                                     <p class="mt-10 mb-20">
-                                        Dialog 須包含了標題、說明文字、關閉icon和兩個動作按鈕。<br/>
-                                        也可以視情況加入文字連結、輸入框。
+                                        Drawer 只少需要有一組分類選單，視情況加入項目分類、收合式選單、搜尋輸入框等。
                                     </p>
                                     <div class="bg-background">
                                         <img class="d-md-block d-none mx-auto" src="../system/drawer-anatomy-desktop.svg" alt="">
