--- a/digital/notification.html
+++ b/digital/notification.html
@@ -87,7 +87,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Ｗhen to use</h2>
                                     <p class="mt-10 mb-20">
-                                        Dialog 需要使用者執行任務、決策或確認的關鍵訊息。
+                                        Notification 的干擾小，傳達簡單的消息。
                                     </p>
                                     <table class="my-20">
                                         <tr>
