--- a/digital/pagination.html
+++ b/digital/pagination.html
@@ -61,7 +61,7 @@
                     <section>
                         <h1 class="mt-0 mb-10">分頁 Pagination</h1>
                         <p>
-                            文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字文字
+                            使用者可以從一系列頁面中前往某個特定頁面。
                         </p>
                     </section>
                     <section>
@@ -189,7 +189,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Anatomy</h2>
                                     <p class="mt-10 mb-20">
-                                        Pagination 包含了
+                                        Pagination 包含了頁數，超過五頁則會有刪節號。
                                     </p>
                                     <div class="bg-background">
                                         <img src="../system/pagination-anatomy.svg" class="mx-auto" alt="">
