--- a/digital/search-field.html
+++ b/digital/search-field.html
@@ -81,13 +81,13 @@
                                 <div class="tab__content__pane active">
                                     <h2 class="mt-0 mb-10">Usage</h2>
                                     <p class="mt-10 mb-20">
-                                        當使用者將鼠標懸停或點擊元素時，將顯示純文字提示使用者元素功能。
+                                        Search 讓使用者可以在此輸入文字快速尋找內容。
                                     </p>
                                     <img src="../system/search-usage-desktop.png" width="100%" alt="">
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Types</h2>
                                     <p class="mt-10 mb-20">
-                                        Buttons 有兩種尺寸及兩種樣式。
+                                        Search 有兩種尺寸及兩種樣式。
                                     </p>
                                     <div class="table--scroll">
                                         <table class="table-btn my-20 text-center">
