--- a/digital/tooltip.html
+++ b/digital/tooltip.html
@@ -128,7 +128,7 @@
                                         <img class="mx-auto" src="../system/tooltip-dont.svg" alt="">
                                     </div>
                                     <p class="mt-20 mb-0">
-                                        項目文字不可變成兩行或截斷文字。
+                                        Tooltips 不可加入 icon。
                                     </p>
                                 </div>
                                 <div class="tab__content__pane">
