--- a/digital/radio-button.html
+++ b/digital/radio-button.html
@@ -87,7 +87,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Ｗhen to use</h2>
                                     <p class="mt-10 mb-20">
-                                        文字文字文字文字文字文字文字文字文字文字文字文字
+                                        Radio Buttons 使用者可以僅能選取一個選項。
                                     </p>
                                     <table>
                                         <tr>
