--- a/digital/iconography.html
+++ b/digital/iconography.html
@@ -64,7 +64,7 @@
                         </p>
                     </section>
                     <section>
-                        <div class="row row-icons mb-30 text-center">
+                        <div class="row row-icons mx-0 mb-30 text-center">
                             <div class="col-auto py-5">
                                 <i class="h2 my-0 icon icon-arrow-left"></i>
                             </div>
