品牌區塊圖文修改

--- a/aside.html
+++ b/aside.html
@@ -3,10 +3,10 @@
         <ul>
             <li><span>設計指南</span>
                 <ul>
-                    <li><a href="../brand/principle.html">設計原則與範例</a></li>
+                    <li><a href="../brand/principle.html">設計原則</a></li>
                 </ul>
             </li>
-            <li><span>LOGO CI</span>
+            <li><span>識別規範</span>
                 <ul>
                     <li><a href="../brand/specification.html">基本規範</a></li>
                     <li><a href="../brand/graphic-application.html">平面應用</a></li>
