--- a/brand/digital-application.html
+++ b/brand/digital-application.html
@@ -61,15 +61,15 @@
                     </section>
                     <section>
                         <div class="mb-40">
-                            <h2 class="mt-0 mb-5">網站</h2>
+                            <h2 class="mt-0 mb-5">一、網站</h2>
                             <p class="mt-0">
-                                請等比例放大縮小 CI 勿變形，最小尺寸勿小於 W68 X H25，寬度在 80px 以下使用無英文 CI。
+                                標誌使用須等比例放大、縮小，切勿變形。標誌縮小使用時，如寬度小於80px，使用無英文版標誌。最小寬度不得小於68px。
                             </p>
                         </div>
                         <div class="mb-40">
-                            <h2 class="mt-0 mb-5">特色頻道、活動</h2>
+                            <h2 class="mt-0 mb-5">二、特色頻道、活動</h2>
                             <p class="mt-0">
-                                雙 CI 並列運用
+                                雙標誌並列使用時，須注意兩者對齊基準、間距關係與大小比例。
                             </p>
                             <div class="row mb-20">
                                 <div class="col-md-6 mt-10">
@@ -77,7 +77,7 @@
                                     <img src="../system/application/logo-fast100-desktop.svg" alt="">
                                 </div>
                                 <div class="col-md-6 mt-10">
-                                    <h4 class="mt-0 mb-10">電腦版</h4>
+                                    <h4 class="mt-0 mb-10">手機版</h4>
                                     <img src="../system/application/logo-fast100-mobile.svg" alt="">
                                 </div>
                             </div>
@@ -87,7 +87,7 @@
                                     <img src="../system/application/logo-off-desktop.svg" alt="">
                                 </div>
                                 <div class="col-md-6 mt-10">
-                                    <h4 class="mt-0 mb-10">電腦版</h4>
+                                    <h4 class="mt-0 mb-10">手機版</h4>
                                     <img src="../system/application/logo-off-mobile.svg" alt="">
                                 </div>
                             </div>
@@ -97,13 +97,13 @@
                                     <img src="../system/application/logo-cwef-desktop.svg" alt="">
                                 </div>
                                 <div class="col-md-6 mt-10">
-                                    <h4 class="mt-0 mb-10">電腦版</h4>
+                                    <h4 class="mt-0 mb-10">手機版</h4>
                                     <img src="../system/application/logo-cwef-mobile.svg" alt="">
                                 </div>
                             </div>
                         </div>
                         <div class="mb-40">
-                            <h2 class="mt-0 mb-5">簡報版型設定</h2>
+                            <h2 class="mt-0 mb-5">三、簡報版型</h2>
                             <div class="row">
                                 <div class="col-12">
                                     <h4 class="mt-0 mb-10">封面</h4>
@@ -112,9 +112,9 @@
                                     <img src="../system/application/ppt-1.png" alt="">
                                 </div>
                                 <div class="col-md-6">
-                                    主標｜K85 / 金萱體 / 字級視字數而定<br/>
-                                    副標｜白 / Zapf / Bold / 字級視字數而定<br/>
-                                    資訊｜K85 / Noto sans / Medium / 22pt
+                                    主標｜K85／金萱體／字級視字數而定<br/>
+                                    副標｜白／Zapf／Bold／字級視字數而定<br/>
+                                    資訊｜K85／Noto sans／Medium／22pt
                                 </div>
                                 <div class="col-12 mt-20">
                                     <h4 class="mt-0 mb-10">分隔頁</h4>
@@ -123,7 +123,7 @@
                                     <img src="../system/application/ppt-2.png" alt="">
                                 </div>
                                 <div class="col-md-6">
-                                    大標題｜白 / 金萱體 / 字級視字數而定
+                                    大標題｜白／金萱體／字級視字數而定
                                 </div>
                                 <div class="col-12 mt-20">
                                     <h4 class="mt-0 mb-10">分隔頁</h4>
@@ -132,9 +132,9 @@
                                     <img src="../system/application/ppt-3.png" alt="">
                                 </div>
                                 <div class="col-md-6">
-                                    小標題 ｜K85 / Noto sans / Bold / 字級視字數而定<br/>
-                                    內文 ｜K85 / Noto sans / Regular / 字級視字數而定<br/>
-                                    頁眉 ｜K85 / 金萱體 / 19pt
+                                    小標題｜K85／Noto sans／Bold／字級視字數而定<br/>
+                                    內文｜K85／Noto sans／Regular／字級視字數而定<br/>
+                                    頁眉｜K85／金萱體／19pt
                                 </div>
                             </div>
                         </div>
