--- a/brand/graphic-application.html
+++ b/brand/graphic-application.html
@@ -58,13 +58,16 @@
                 <article class="col-md">
                     <section>
                         <h1 class="mt-0 mb-10">平面應用</h1>
-                        <p>
-                            此處所標示之標誌格線圖，明白標示精確的尺寸與各元素之間的關係，在複製標誌時應嚴格遵守此規範，其他標誌組合，只可使用本手冊所提供的複製圖樣，不可自行重繪。
-                        </p>
                     </section>
                     <section>
                         <div class="mb-40">
-                            <h2 class="mt-0 mb-5">雜誌封面設定</h2>
+                            <h2 class="mt-0 mb-5">一、各式平面</h2>
+                            <p class="mt-0">
+                                標誌使用須等比例放大、縮小，切勿變形。標誌縮小使用時，如寬度小於3公分，使用無英文版標誌。最小寬度不得小於2公分。
+                            </p>
+                        </div>
+                        <div class="mb-40">
+                            <h2 class="mt-0 mb-5">二、雜誌封面</h2>
                             <div class="row">
                                 <div class="col-md-6 mt-20">
                                     <img src="../system/application/redline-1.png" alt="">
@@ -75,21 +78,12 @@
                                 <div class="col-md-6 mt-20">
                                     <img src="../system/application/redline-3.png" alt="">
                                 </div>
-                                <div class="col-md-6 mt-20">
-                                    <p class="pl-md-40 ml-md-5">
-                                        中文 ：Noto sans<br/>
-                                        英文 ：Avenir<br/>
-                                        數字 ：Avenir<br/>
-                                        標題 ：12pt<br/>
-                                        圖說 ：8.5pt
-                                    </p>
-                                </div>
                             </div>
                         </div>
                         <div class="mb-40">
-                            <h2 class="mt-0 mb-5">雜誌內頁 LOGO 位置設定</h2>
+                            <h2 class="mt-0 mb-5">三、雜誌內頁</h2>
                             <p class="mt-0">
-                                雜誌內頁如需放置 LOGO，請置於左頁左上角上下 0.8 公分位置。
+                                雜誌內頁如需放置標誌，請置於左頁左上角，距離左上側邊緣各0.8公分位置。
                             </p>
                             <img src="../system/application/mag-ad.svg" class="my-20" alt="">
                         </div>
