--- a/brand/principle.html
+++ b/brand/principle.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>設計原則與範例｜品牌｜天下設計系統 CW Design System</title>
+    <title>設計原則｜品牌｜天下設計系統 CW Design System</title>
     <link rel="shortcut icon" href="https://www.cw.com.tw/assets_new/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="../assets/css/cw.css">
@@ -57,10 +57,9 @@
                 <aside class="col-md-auto"></aside>
                 <article class="col-md">
                     <section>
-                        <h1 class="mt-0 mb-10">設計原則與範例</h1>
+                        <h1 class="mt-0 mb-10">設計原則</h1>
                         <p>
-                            這是一份面向外部的內部指南，是天下品牌調性的北極星，為大家指引方向。<br/>
-                            希望透過這些實用的設計原則與規範，清楚傳遞天下品牌的核心價值。
+                            關於天下品牌調性：
                         </p>
                         <ul>
                             <li class="mt-5">天下的<span class="text-primary">定位</span>：廣義的財經雜誌（70%的報導是財經相關，30%是政治、社會、環境、教育、文化等）</li>
@@ -69,42 +68,48 @@
                             <li class="mt-5">天下的<span class="text-primary">調性</span>：大方、份量、現代、簡潔、明亮</li>
                         </ul>
                         <p>
-                            天下的設計理念：調性沒有好壞，只有適不適合。例如：現代卻陰暗的設計就不適合天下。很有設計感，太細瑣繁複的設計不適合天下。很精緻但份量不夠，也不適合天下。但雖然要有份量，也不能顯得沈重，而是要有現代感、有活力、不老舊的感覺。要有品味、質感，不能粗俗。
+                            天下的設計理念：調性沒有好壞，只有適不適合。例如：有現代感，卻陰暗的設計就不適合天下。<br/>
+                            很有設計感，太細瑣繁複的設計不適合天下。<br/>
+                            很精緻但份量不夠，也不適合天下。<br/>
+                            雖然要有份量，也不能顯得沈重，而是要有現代感、有活力、不老舊的感覺。<br/>
+                            要有品味、質感，不能粗俗。
                         </p>
                         <p>
-                            天下的設計原則：「主題明確」才可呈現大方、份量的調性，「層次簡明、編排俐落、用字單純」才可呈現現代、簡潔的調性，「用色明亮」才可呈現明亮的調性。各設計原則範例如下：
+                            天下的設計原則：「主題明確」才可呈現大方、份量的調性。<br/>
+                            「層次簡明、編排俐落、用字單純」才可呈現現代、簡潔的調性。<br/>
+                            「用色明亮」才可呈現明亮的調性。各設計原則範例如下：
                         </p>
                     </section>
                     <section>
-                        <h2 class="mt-0 mb-5">主題明確</h2>
+                        <h2 class="mt-0 mb-5">一、主題明確</h2>
                         <p class="my-0">
-                            主視覺清楚、單一、具體、直接、大方一目了然。
+                            主視覺清楚、單一、具體、直接、大方、一目了然。
                         </p>
                         <div class="row mb-40">
                             <div class="col-md-6 mt-20">
-                                <img src="../system/brand/object-clear-1.jpg" width="100%" alt="">
+                                <img src="../system/brand/object-clear-1.png" width="100%" alt="">
                             </div>
                             <div class="col-md-6 mt-20">
-                                <img src="../system/brand/object-clear-2.jpg" width="100%" alt="">
+                                <img src="../system/brand/object-clear-2.png" width="100%" alt="">
                             </div>
                         </div>
-                        <h2 class="mt-0 mb-5">層次簡明</h2>
+                        <h2 class="mt-0 mb-5">二、層次簡明</h2>
                         <p class="my-0">
-                            使用適當字型、大小及粗細，使主次訊息分層簡單明確、不複雜。
+                            使用適當的字型、大小及粗細，使主次訊息簡單明確、分層不複雜。
                         </p>
                         <div class="row mb-40">
                             <div class="col-md-6 mt-20">
-                                <img src="../system/brand/simple-level-1.jpg" width="100%" alt="">
+                                <img src="../system/brand/simple-level-1.png" width="100%" alt="">
                             </div>
                             <div class="col-md-6 mt-20">
                                 <img src="../system/brand/simple-level-2.jpg" width="100%" alt="">
                             </div>
                         </div>
-                        <h2 class="mt-0 mb-5">編排俐落</h2>
+                        <h2 class="mt-0 mb-5">三、編排俐落</h2>
                         <p class="my-0">
-                            統一文字對齊方式，同一版面不超過兩款對齊方式。（齊頭、齊中、齊尾、繞圖排文，擇一或二）<br/>
-                            視覺元素（文字、圖像）配置統整，不零碎、鬆散。<br/>
-                            版面隔線（Grid）設定單純清楚，物件均明確對齊隔線。
+                            1. 統一文字對齊方式，同一畫面不超過兩款對齊方式。（齊頭、齊中、齊尾、繞圖排文，擇一或二）<br/>
+                            2. 視覺元素（文字、圖像）配置統整，不零碎、鬆散。<br/>
+                            3. 畫面隔線（Grid）設定簡單清楚，物件均明確對齊隔線。
                         </p>
                         <div class="row mb-40">
                             <div class="col-md-6 mt-20">
@@ -114,10 +119,10 @@
                                 <img src="../system/brand/grid-clear-2.jpg" width="100%" alt="">
                             </div>
                         </div>
-                        <h2 class="mt-0 mb-5">用字單純</h2>
+                        <h2 class="mt-0 mb-5">四、用字單純</h2>
                         <p class="my-0">
-                            限制字型、大小及粗細的樣式數量。主標、副標、內文，同一版面以不超過三款樣式為原則。<br/>
-                            保持字體原本的樣子，不任意改變字體寬高比例。
+                            1. 限制字型、字級及粗細的樣式數量。主標、副標、內文，同一畫面以不超過三款樣式為原則。<br/>
+                            2. 保持字型原貌，不任意調整字型寬高比例及斜度。
                         </p>
                         <div class="row mb-40">
                             <div class="col-md-6 mt-20">
@@ -127,11 +132,11 @@
                                 <img src="../system/brand/simple-style-2.jpg" width="100%" alt="">
                             </div>
                         </div>
-                        <h2 class="mt-0 mb-5">用色明亮</h2>
+                        <h2 class="mt-0 mb-5">五、用色明亮</h2>
                         <p class="my-0">
-                            不用曖昧色、濁色，僅限用一次、二次色（CMY 擇一或二，至多輔以 K 調整明暗）。<br/>
-                            不用補色、對比色，降低視覺刺激衝突。<br/>
-                            限制同一版面用色數量，以主視覺的色彩作延伸配色。
+                            1. 不用曖昧色、濁色，僅限用一次、二次色。（即原色CMY擇一或二，至多輔以K調整明暗）<br/>
+                            2. 不用補色、對比色、螢光色，降低視覺刺激衝突。<br/>
+                            3. 限制同一畫面用色數量，以主視覺的色彩作延伸配色。
                         </p>
                         <div class="row mb-40">
                             <div class="col-md-6 mt-20">
