--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 <img src="system/landing/logo-hover.svg" class="hover mx-auto my-30" alt="">
                                 <span class="item-title h4 d-flex">
                                     <b>
-                                        LOGO CI
+                                        識別規範
                                     </b>
                                     <i class="h6 icon icon-right ml-5"></i>
                                 </span>
