品牌+平面產品+選單圖文修改

--- a/graphic/color.html
+++ b/graphic/color.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>顏色 Color｜平面產品｜天下設計系統 CW Design System</title>
+    <title>顏色｜平面產品｜天下設計系統 CW Design System</title>
     <link rel="shortcut icon" href="https://www.cw.com.tw/assets_new/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="../assets/css/cw.css">
@@ -57,18 +57,13 @@
                 <aside class="col-md-auto"></aside>
                 <article class="col-md">
                     <section>
-                        <h1 class="mt-0 mb-10">顏色 Color</h1>
+                        <h1 class="mt-0 mb-10">顏色</h1>
                         <p>
-                            天下藉由顏色在品牌、行銷、活動、平面與數位內容等通路傳達一致的形象。<br/>
-                            清楚、明確、單純的用色，可達成天下的品牌印象。
+                            藉由色彩設定及應用，使天下在品牌、行銷、活動、新聞內容等通路能有一致的視覺形象，且傳達簡潔、明亮的品牌調性。
                         </p>
                     </section>
                     <section class="mb-40">
-                        <h2 class="mt-0 mb-5">品牌</h2>
-                        <ul class="mt-0">
-                            <li>天下的<span class="text-primary">定位</span>：廣義的財經雜誌（70%的報導是財經相關，30%是政治、社會、環境、教育、文化等）</li>
-                            <li>天下的<span class="text-primary">性格</span>：冷靜、溫暖、帶來能量</li>
-                        </ul>
+                        <h2 class="mt-0 mb-5">一、品牌</h2>
                         <div class="toggle__color mb-5">
                             <button type="button" value="hex" class="item active">HEX</button>
                             <button type="button" value="rgb" class="item">RGB</button>
@@ -126,11 +121,11 @@
                         </div>
                     </section>
                     <section class="mb-40">
-                        <h2 class="mt-0 mb-5">行銷</h2>
+                        <h2 class="mt-0 mb-5">二、行銷</h2>
                         <ul class="mt-0">
-                            <li>天下品牌色為紅色。依據行銷視覺需求，可以增加使用藍綠色（副色 1）、假金色（副色 2）、灰色（中性色）色階作為輔助色，延伸發展相關視覺。</li>
+                            <li>天下品牌色為紅色。依據行銷視覺需求，可以增加使用藍綠色（副色1）、假金色（副色2）、灰色色階作為輔助色，延伸發展相關視覺。</li>
                             <li>副色僅可擇一與主色搭配，不可彼此搭配或交互使用。</li>
-                            <li>若畫面有特別重點強調之處，可小面積使用強調色。</li>
+                            <li>若畫面有特別需重點強調之處，可小面積使用黃色（強調色）。</li>
                         </ul>
                         <div class="toggle__color mt-20 mb-5">
                             <button type="button" value="hex" class="item active">HEX</button>
@@ -160,7 +155,7 @@
                                 <div class="h5 my-0">#F5CEB9</div>
                             </div>
                         </div>
-                        <h3 class="mt-0 mb-10">副色 1</h3>
+                        <h3 class="mt-0 mb-10">副色1</h3>
                         <div class="row mx-0 mb-20">
                             <div class="col-md-2 py-10 color-board bg-mkt-blue-500">
                                 <div class="h4 my-0">Dark</div>
@@ -183,7 +178,7 @@
                                 <div class="h5 my-0">#D3ECF3</div>
                             </div>
                         </div>
-                        <h3 class="mt-0 mb-10">副色 2</h3>
+                        <h3 class="mt-0 mb-10">副色2</h3>
                         <div class="row mx-0 mb-20">
                             <div class="col-md-2 py-10 color-board bg-mkt-natural-500">
                                 <div class="h4 my-0">Dark</div>
@@ -206,7 +201,7 @@
                                 <div class="h5 my-0">#F1E9D5</div>
                             </div>
                         </div>
-                        <h3 class="mt-0 mb-10">副色 3</h3>
+                        <h3 class="mt-0 mb-10">灰色</h3>
                         <div class="row mx-0 mb-20">
                             <div class="col-md-2 py-10 color-board bg-brand-gray-600">
                                 <div class="h4 my-0">Dark</div>
@@ -233,7 +228,7 @@
                                 <div class="h5 my-0">#FFFFFF</div>
                             </div>
                         </div>
-                        <h3 class="mt-0 mb-10">副色 4</h3>
+                        <h3 class="mt-0 mb-10">強調色</h3>
                         <div class="row mx-0 mb-20">
                             <div class="col-md-2 py-10 color-board bg-mkt-yellow-300">
                                 <div class="h4 my-0">Dark</div>
@@ -250,7 +245,7 @@
                         </div>
                     </section>
                     <section class="mb-40">
-                        <h2 class="mt-0 mb-5">天下經濟論壇 CWEF</h2>
+                        <h2 class="mt-0 mb-5">三、天下經濟論壇CWEF</h2>
                         <p class="mt-0">
                             天下經濟論壇為品牌定期大型活動，特此設定專用色。
                         </p>
@@ -306,9 +301,9 @@
                         </div>
                     </section>
                     <section class="mb-40">
-                        <h2 class="mt-0 mb-5">新聞 News（Print）</h2>
+                        <h2 class="mt-0 mb-5">四、新聞內容（Print）</h2>
                         <p class="mt-0">
-                            紙本天下雜誌各欄位主色。可依據編輯需求，使用所屬欄位色階作為延伸發展應用。
+                            天下雜誌紙本各欄位主色。可依據編輯需求，使用所屬欄位色階作為延伸發展應用。
                         </p>
                         <div class="toggle__color mt-20 mb-5">
                             <button type="button" value="hex" class="item active">HEX</button>
