--- a/graphic/typography.html
+++ b/graphic/typography.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文字 Typography｜平面產品｜天下設計系統 CW Design System</title>
+    <title>文字｜平面產品｜天下設計系統 CW Design System</title>
     <link rel="shortcut icon" href="https://www.cw.com.tw/assets_new/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="../assets/css/cw.css">
@@ -57,7 +57,7 @@
                 <aside class="col-md-auto"></aside>
                 <article class="col-md">
                     <section>
-                        <h1 class="mt-0 mb-10">文字 Typography</h1>
+                        <h1 class="mt-0 mb-10">文字</h1>
                         <p>
                             這是一段介紹。《天下雜誌》使用顏色來傳達界面中的功能，便於我們建立系統性視覺範本，讓《天下》紙本可以。白、黑、藍、紅，是《天下》數位產品的顏色。顏色沒有先後順序，重要的是哪種顏色最適合傳達你想要的信息。
                         </p>
